# pew_research_study

./: README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: codebook_ffilled-checkpoint.csv  pew_dataset_analysis-checkpoint.ipynb
CsvUtil/: CsvUtil.py
SurveyTool/: CsvUtil.py  SurveyTool.py
SurveyTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datasets/Pew-Research-Center-Global-Attitudes-Spring-2024-Survey-Public/: Pew Research Center Global Attitudes Spring 2024 Metadata.xml
datasets/W139_Dec23/: ATP W139 Codebook.csv  ATP W139 Codebook_ffilled.csv
datasets/W139_Dec23/ATP W139 Codebook/: [Content_Types].xml
datasets/W139_Dec23/ATP W139 Codebook/_rels/: .rels
datasets/W139_Dec23/ATP W139 Codebook/docProps/: core.xml
datasets/W139_Dec23/ATP W139 Codebook/xl/: sharedStrings.xml  styles.xml  workbook.xml
datasets/W139_Dec23/ATP W139 Codebook/xl/worksheets/: sheet1.xml
datasets/W139_Dec23/ATP W139 Codebook/xl/worksheets/_rels/: sheet1.xml.rels
datasets/W144_Mar24/: ATP W144 Codebook.csv  ATP W144 Codebook.xlsx  ATP W144 Codebook_ffilled.csv  ATP W144 Readme.txt
demos/: Demo.ipynb
demos/.ipynb_checkpoints/: Demo-checkpoint.ipynb  pew_dataset_analysis-checkpoint.ipynb
