[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SurveyTool"
version = "0.1.0"
description = "A tool for ingesting Pew Research Datasets and exploring questions and responses"
authors = [
    { name = "Cruz De La Cruz", email = "delacruzmanc@gmail.com" }
]
dependencies = ["pandas", "plotly"]

[tool.setuptools.packages.find]
where = ["."]